--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "priceit",
   "version": "1.0.0",
   "description": "Search Engine that will search for used and new items ",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
+    "start": "nodemon -e dist/app.js",
+    "lint": "eslint . --ext .ts",
+    "dev": "nodemon --exec 'npm run start'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +20,15 @@
   },
   "homepage": "https://github.com/aaronalayo/priceit#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.1",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "eslint": "^8.28.0",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
 }
