--- a/package.json
+++ b/package.json
@@ -1,34 +1,45 @@
 {
   "name": "priceit",
   "version": "1.0.0",
-  "description": "Search Engine that will search for used and new items ",
-  "main": "dist/app.js",
+  "description": "Search engine for used and new products",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon -e dist/app.js",
-    "lint": "eslint . --ext .ts",
-    "dev": "nodemon --exec 'npm run start'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.ts",
+    "build": "npm run lint && rimraf dist/ && tsc",
+    "start": "npm run build && node --loader ts-node/esm dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src/**/*.ts"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aaronalayo/priceit.git"
   },
-  "author": "Aaron&Tariq",
+  "author": "Aaron ALAYO & Tariq Zamani",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/aaronalayo/priceit/issues"
   },
   "homepage": "https://github.com/aaronalayo/priceit#readme",
-  "dependencies": {
-    "express": "^4.17.1"
-  },
+  "type": "module",
   "devDependencies": {
-    "@types/express": "^4.17.1",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
+    "@tsconfig/node-lts-strictest-esm": "^18.12.1",
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.20",
+    "prettier": "^2.8.0",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "@types/node-fetch": "^2.6.2",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.0"
   }
 }
