--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "type": "module",
   "devDependencies": {
     "@tsconfig/node-lts-strictest-esm": "^18.12.1",
+    "@types/cors": "^2.8.12",
+    "@types/ebay-oauth-nodejs-client": "^1.2.0",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
@@ -38,7 +40,9 @@
   },
   "dependencies": {
     "@types/node-fetch": "^2.6.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ebay-oauth-nodejs-client": "^1.2.2",
     "express": "^4.18.2",
     "node-fetch": "^3.3.0"
   }
