--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ebay-oauth-nodejs-client": "^1.2.2",
     "express": "^4.18.2",
     "node-fetch": "^3.3.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "redis": "^4.5.1"
   }
 }
