--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "ebay-oauth-nodejs-client": "^1.2.2",
     "express": "^4.18.2",
     "joi": "^17.7.0",
+    "mogoose": "^0.0.1-security",
     "mongodb": "^4.12.1",
+    "mongoose": "^6.7.5",
     "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20"
   }
