--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@types/jwt-simple": "^0.5.33",
     "@types/node-fetch": "^2.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ebay-oauth-nodejs-client": "^1.2.2",
     "express": "^4.18.2",
     "joi": "^17.7.0",
+    "jwt-simple": "^0.5.6",
     "mogoose": "^0.0.1-security",
     "mongodb": "^4.12.1",
     "mongoose": "^6.7.5",
