--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "ebay-oauth-nodejs-client": "^1.2.2",
     "express": "^4.18.2",
     "joi": "^17.7.0",
-    "jwt-simple": "^0.5.6",
+    "jsonwebtoken": "^8.5.1",
     "mogoose": "^0.0.1-security",
     "mongodb": "^4.12.1",
     "mongoose": "^6.7.5",
