--- a/package.json
+++ b/package.json
@@ -22,18 +22,25 @@
   "homepage": "https://github.com/aaronalayo/priceit#readme",
   "type": "module",
   "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
     "@tsconfig/node-lts-strictest-esm": "^18.12.1",
     "@types/cors": "^2.8.12",
     "@types/ebay-oauth-nodejs-client": "^1.2.0",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.4",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
+    "babel-jest": "^29.3.1",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.3.1",
     "prettier": "^2.8.0",
     "rimraf": "^3.0.2",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
