--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,41 @@
 version: '3.8'
+
 services:
-  mongo:
-    image: mongo:latest
-    container_name: mongo
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
-      MONGO_INITDB_DATABASE: ${MONGO_DATABASE_NAME}
-    env_file:
-      - ./.env
-    volumes:
-      - mongo:/data/db
+
+  price_it_app:
+    # depends_on:
+    #   - mongo
+    build: .
+    restart: unless-stopped
+    env_file: ./.env
     ports:
-      - '6000:27017'
+      - ${DOCKER_SERVER_PORT}:${LOCAL_SERVER_PORT}
+    environment:
+      DOCKER_SERVER_PORT: ${DOCKER_SERVER_PORT}
+      MONGO_HOST: ${MONGO_HOST}
+      MONGO_PORT: ${MONGO_PORT}
+      MONGO_USERNAME: ${MONGO_USERNAME}
+      MONGO_PASSWORD: ${MONGO_PASSWORD}
+    volumes:
+      - .:/usr/src/price_it_app
+      - /usr/src/app/node_modules
+
+  # Uncomment mongo below if you want to use docker container instead of hosted MongoDB
+
+  # mongo:
+  #   image: mongo:latest
+  #   container_name: mongo
+  #   environment:
+  #     MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
+  #     MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
+  #     # MONGO_INITDB_DATABASE: ${MONGO_DATABASE_NAME}
+  #   env_file:
+  #     - ./.env
+  #   volumes:
+  #     - mongo:/data/mongo
+  #   ports:
+  #     - ${DOCKER_MONGO_PORT}:${LOCAL_MONGO_PORT}
+
   redis:
     image: redis:latest
     container_name: redis
@@ -21,8 +44,9 @@ services:
     expose:
       - "6379"
     volumes:
-      - redis:/data
-    restart: always
+      - redis:/data/redis
+    restart: unless-stopped
+
 volumes:
   mongo:
   redis:
