--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon src/index.ts",
     "build": "npm run lint && rimraf dist/ && tsc",
     "start": "npm run build && node --loader ts-node/esm dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config=./jest.config.ts --rootDir=./src/",
     "lint": "eslint src/**/*.ts"
   },
   "repository": {
@@ -45,16 +45,18 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/node-fetch": "^2.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ebay-oauth-nodejs-client": "^1.2.2",
     "express": "^4.18.2",
     "joi": "^17.7.0",
+    "lodash": "^4.17.21",
     "mogoose": "^0.0.1-security",
     "mongodb": "^4.12.1",
     "mongoose": "^6.7.5",
-    "node-fetch": "^3.3.0",
+    "node-fetch": "^2.6.7",
     "nodemon": "^2.0.20",
     "redis": "^4.5.1"
   }
