--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "test": "jest --config=./jest.config.ts --rootDir=./src/",
     "lint": "eslint src/**/*.ts"
   },
+  "pkg": {
+    "scripts": [
+      "node_modules/selenium-webdriver/**/*.js"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aaronalayo/priceit.git"
@@ -31,6 +36,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.9",
+    "@types/selenium-webdriver": "^4.1.10",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "babel-jest": "^29.3.1",
@@ -56,6 +62,7 @@
     "mongoose": "^6.7.5",
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.20",
-    "redis": "^4.5.1"
+    "redis": "^4.5.1",
+    "selenium-webdriver": "^4.7.1"
   }
 }
