--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3.8'
 
 services:
-
   price_it_app:
     # depends_on:
     #   - mongo
@@ -36,16 +35,19 @@ services:
   #   ports:
   #     - ${DOCKER_MONGO_PORT}:${LOCAL_MONGO_PORT}
 
-  redis:
-    image: redis:latest
-    container_name: redis
-    ports:
-      - '6379:6379'
-    expose:
-      - "6379"
-    volumes:
-      - redis:/data/redis
-    restart: unless-stopped
+  # redis:
+  #   image: redis:latest
+  #   container_name: redis_backend
+  #   environment:
+  #     REDIS_PWD: '${REDIS_PASSWORD}'
+  #   ports:
+  #     - '6379:6379'
+  #   expose:
+  #     - "6379"
+  #   command: redis-server --save 20 1 --loglevel warning --requirepass $REDIS_PASSWORD
+  #   volumes:
+  #     - redis:/data/redis
+  #   restart: unless-stopped
 
 volumes:
   mongo:
