--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "npm run lint && rimraf dist/ && tsc",
+    "build": "npm run rimraf dist/ && tsc",
     "start": "npm run build && node --loader ts-node/esm dist/index.js",
     "test": "jest --config=./jest.config.ts --rootDir=./src/"
   },
