--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "npm run lint && rimraf dist/ && tsc",
-    "start": "npm run build && node --loader ts-node/esm dist/index.js",
+    "start":"npx ts-node ./src/index.ts",
     "test": "jest --config=./jest.config.ts --rootDir=./src/",
     "lint": "eslint src/**/*.ts"
   },
