--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
     "prettier": "^2.8.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4",
     "@types/lodash": "^4.14.191",
     "@types/node-fetch": "^2.6.2",
-    "ts-node": "^10.9.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ebay-oauth-nodejs-client": "^1.2.2",
