--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
      
 
     "include": ["src/index.ts"],
-    "exclude": ["dist, node_modules,test"]
+    "exclude": ["dist, node_modules,test,package-lock.json"]
   }
