--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     restart: unless-stopped
     env_file: ./.env
     ports:  
-      - ${DOCKER_SERVER_PORT}:${LOCAL_SERVER_PORT}
+      - 8080:8080 # Hardcoded ports - CI doesn't won't accept env vars as port
     volumes:
       - .:/usr/src/price_it_app
       - /usr/src/app/node_modules
@@ -39,7 +39,6 @@ services:
     volumes:
       - redis:/data/redis
     restart: unless-stopped
-
 
 volumes:
   mongo:
