--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,31 @@
-version: '3.8'
+version: '3'
 
 services:
   price_it_app:
-    depends_on:
-      - redis
+#    depends_on:
+#      - redis
     build: .
     restart: unless-stopped
     env_file: ./.env
     ports:
-      - 8080:8080 # Hardcoded ports - CI doesn't won't accept env vars as port
+      - ${DOCKER_SERVER_PORT}:${LOCAL_SERVER_PORT} # Hardcoded ports - CI doesn't won't accept env vars as port
     volumes:
       - .:/usr/src/price_it_app
       - /usr/src/app/node_modules
 
 
-  redis:
-    image: redis
-    container_name: redis
-    command: /bin/sh -c "redis-server --requirepass ${REDIS_PASSWORD}"
-    env_file: ./.env
-    ports:
-      - 6379:6379
-    volumes:
-      - redis:/data/redis
-    restart: unless-stopped
+#  redis:
+#    image: redis
+#    container_name: redis
+#    command: /bin/sh -c "redis-server --requirepass ${REDIS_PASSWORD}"
+#    env_file: ./.env
+#    ports:
+#      - 6379:6379
+#    volumes:
+#      - redis:/data/redis
+#    restart: unless-stopped
 
-volumes:
-  mongo:
-  redis:
+# volumes:
+#  mongo:
+#  redis:
 
