--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -19,6 +19,10 @@ jobs:
       REDIS_HOST: ${{ secrets.REDIS_HOST}}
       REDIS_PORT: ${{ secrets.REDIS_PORT}}
       REDIS_PASSWORD: ${{ secrets.REDIS_PASSWORD}}
+      PROD_APP_ID: ${{ secrets.PROD_APP_ID }}
+      PROD_CLIENT_SECRET: ${{ secrets.PROD_CLIENT_SECRET }}
+      PROD_BASE_URL: ${{ secrets.PROD_BASE_URL }}
+      PROD_REDIRECT_URI: ${{secrets.PROD_REDIRECT_URI }}
 
     steps:
     - name: Check out repository code
